feat: Update reveal overlay functionality to prevent event propagation for blurred media

--- a/src/app/components/event-types/photo-event.component.html
+++ b/src/app/components/event-types/photo-event.component.html
@@ -27,7 +27,7 @@
 
       <!-- Click to reveal overlay for blurred images -->
       @if (shouldBlurMedia()) {
-      <div class="reveal-overlay" (click)="revealMedia()">
+      <div class="reveal-overlay" (click)="revealMedia(); $event.stopPropagation()">
         <mat-icon>visibility</mat-icon>
         <span>Click to reveal</span>
       </div>
