--- a/src/app/components/event-types/video-event.component.html
+++ b/src/app/components/event-types/video-event.component.html
@@ -40,7 +40,7 @@
 
     <!-- Reveal overlay for blurred media -->
     @if (shouldBlurMedia()) {
-    <div class="reveal-overlay" (click)="revealMedia()">
+    <div class="reveal-overlay" (click)="revealMedia(); $event.stopPropagation()">
       <mat-icon>visibility</mat-icon>
       <span>Click to reveal</span>
     </div>
