feat: Optimize blurhash generation size and improve quality balance

--- a/src/app/components/media-with-comments-dialog/media-with-comments-dialog.component.scss
+++ b/src/app/components/media-with-comments-dialog/media-with-comments-dialog.component.scss
@@ -213,7 +213,9 @@
   display: grid;
   grid-template-columns: 1fr 400px;
   height: 100%;
+  width: 100%;
   overflow: hidden;
+  flex: 1; // Take remaining space in dialog-container
 }
 
 // Media side (left)
