--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -87,6 +87,9 @@ mat-sidenav-content {
 
 .toolbar-spacer {
   flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .close-button {
